--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,8 +17,8 @@
         }
 
         img {
-            width: 50%;
-            max-width: 500px;
+            width: 80%; /* Increase the width to 80% of the screen */
+            max-width: 800px; /* Set a max width for larger screens */
         }
     </style>
 </head>
