--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 </head>
 <body>
     <h1>?האם אתה ספונטני</h1>
-    <button onclick="showImage('yes')">כן</button>
+    
+    <!-- "לא" button is now on the left, and "כן" button is on the right -->
     <button onclick="showImage('no')">לא</button>
+    <button onclick="showImage('yes')">כן</button>
 
     <div id="image-container">
         <img id="dynamic-image" src="" alt="Response Image">
