--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         }
 
         function showSuccessPage() {
-            document.body.innerHTML = "<h1>נרשמת בהצלחה :)</h1>"; // Replace the entire page with success message
+            document.body.innerHTML = "<h1>(: נרשמת בהצלחה</h1>"; // Replace the entire page with success message
         }
     </script>
 </body>
