--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="checkbox-container">
         <label>
             <input type="checkbox" id="reserve-checkbox" onchange="showConfirmButton()"> 
-            שריון מקום ברכב של יופה
+            שיריון מקום ברכב של יופה
         </label>
     </div>
 
