--- a/index.html
+++ b/index.html
@@ -21,11 +21,34 @@
             max-width: 800px; /* Limit maximum width */
         }
 
+        button {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%; /* Makes the buttons circular */
+            font-size: 18px;
+            cursor: pointer;
+            margin: 20px;
+            border: none;
+            background-color: #4CAF50; /* Green background */
+            color: white;
+        }
+
+        /* Add hover effect to buttons */
+        button:hover {
+            background-color: #45a049;
+        }
+
         /* Responsive settings for mobile devices */
         @media (max-width: 600px) {
             img {
                 width: 100%; /* Ensure image fills the screen on mobile */
                 max-width: none; /* Remove the max-width constraint for small devices */
+            }
+
+            button {
+                width: 80px;
+                height: 80px;
+                font-size: 16px;
             }
         }
     </style>
@@ -44,7 +67,7 @@
     <div id="checkbox-container">
         <label>
             <input type="checkbox" id="reserve-checkbox" onchange="showConfirmButton()"> 
-            שיריון מקום ברכב של יופה
+            שריון מקום ברכב של יופה
         </label>
     </div>
 
@@ -81,7 +104,7 @@
         }
 
         function showSuccessPage() {
-            document.body.innerHTML = "<h1>(: נרשמת בהצלחה</h1>"; // Replace the entire page with success message
+            document.body.innerHTML = "<h1>נרשמת בהצלחה :)</h1>"; // Replace the entire page with success message
         }
     </script>
 </body>
