--- a/index.html
+++ b/index.html
@@ -22,20 +22,33 @@
         }
 
         button {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%; /* Makes the buttons circular */
-            font-size: 18px;
+            font-size: 22px; /* Increase text size */
             cursor: pointer;
             margin: 20px;
             border: none;
-            background-color: #4CAF50; /* Green background */
             color: white;
         }
 
-        /* Add hover effect to buttons */
-        button:hover {
-            background-color: #45a049;
+        /* "כן" button - green */
+        button:nth-child(3) {
+            background-color: #4CAF50; /* Green background */
+        }
+
+        /* "לא" button - red */
+        button:nth-child(2) {
+            background-color: #f44336; /* Red background */
+        }
+
+        /* Hover effects */
+        button:nth-child(3):hover {
+            background-color: #45a049; /* Darker green on hover */
+        }
+
+        button:nth-child(2):hover {
+            background-color: #d32f2f; /* Darker red on hover */
         }
 
         /* Responsive settings for mobile devices */
@@ -46,9 +59,9 @@
             }
 
             button {
-                width: 80px;
-                height: 80px;
-                font-size: 16px;
+                width: 100px;
+                height: 100px;
+                font-size: 20px;
             }
         }
     </style>
@@ -56,7 +69,7 @@
 <body>
     <h1>?האם אתה ספונטני</h1>
     
-    <!-- "לא" button is on the left, and "כן" button is on the right -->
+    <!-- "לא" button is now red, and "כן" button is green -->
     <button onclick="showImage('no')">לא</button>
     <button onclick="showImage('yes')">כן</button>
 
