--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
             display: block;
             margin-left: auto;
             margin-right: auto; /* Centers the button horizontally */
+            visibility: hidden; /* Hidden by default */
         }
 
         /* Active State for the Confirmation Button */
         #confirm-button.active {
             background-color: #4CAF50;
             cursor: pointer;
+            visibility: visible; /* Make the button visible once active */
         }
 
         /* Responsive settings for mobile devices */
@@ -125,13 +127,13 @@
                 dynamicImage.src = 'Ibiza.png'; // Image for "כן"
                 imageContainer.style.display = 'block';
                 checkboxContainer.style.display = 'block'; // Show the checkbox after the image is shown
-                confirmButton.style.display = 'block'; // Show the confirm button, but it will still be disabled initially
+                confirmButton.style.visibility = 'visible'; // Show the confirm button, but it will still be disabled initially
                 confirmButton.disabled = true; // Ensure the button is disabled initially
             } else {
                 dynamicImage.src = 'Stay Home.webp'; // Image for "לא"
                 imageContainer.style.display = 'block';
                 checkboxContainer.style.display = 'none'; // Hide the checkbox if "לא" is clicked
-                confirmButton.style.display = 'none'; // Hide the confirm button if "לא" is clicked
+                confirmButton.style.visibility = 'hidden'; // Hide the confirm button if "לא" is clicked
             }
         }
 
@@ -154,7 +156,7 @@
             document.body.innerHTML = `
                 <h1>(: נרשמת בהצלחה</h1>
                 <img src="QR Code.PNG" alt="QR Code" style="width: 200px; height: auto; margin-top: 20px;">
-                <p>עשו צילום מסך ליופה</p>
+                <p>עשו צילום מסך ליופה וחכו לאישור</p>
             `; // Display success message, image, and text
         }
     </script>
