--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             document.body.innerHTML = `
                 <h1>(: נרשמת בהצלחה</h1>
                 <img src="QR Code.PNG" alt="QR Code" style="width: 200px; height: auto; margin-top: 20px;">
-                <p>עשו צילום מסך ליופה וחכו לאישור</p>
+                <p>עשו צילום מסך ל-יופה וחכו לאישור</p>
             `; // Display success message, image, and text
         }
     </script>
